--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,5 @@ edition = "2021"
 clap = { version = "4.0.32", features = ["derive"]}
 lazy_static = "1.4.0"
 regex = "1.7.1"
+serde = { version = "1.0.152", features = ["derive"]}
+toml = "0.7.2"
