--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.0.32", features = ["derive"]}
 lazy_static = "1.4.0"
+num = "0.4.0"
 regex = "1.7.1"
 serde = { version = "1.0.152", features = ["derive"]}
 toml = "0.7.2"
