--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 clap = { version = "4.0.32", features = ["derive"]}
 lazy_static = "1.4.0"
 num = "0.4.0"
+ref-cast = "1.0.15"
 regex = "1.7.1"
 serde = { version = "1.0.152", features = ["derive"]}
 toml = "0.7.2"
