--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.0.32", features = ["derive"]}
+itertools = "0.10.5"
 lazy_static = "1.4.0"
 num = "0.4.0"
 ref-cast = "1.0.15"
