--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,4 +14,5 @@ num = "0.4.0"
 ref-cast = "1.0.15"
 regex = "1.7.1"
 serde = { version = "1.0.152", features = ["derive"]}
+slug = "0.1.4"
 toml = "0.7.2"
