--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,4 +15,5 @@ ref-cast = "1.0.15"
 regex = "1.7.1"
 serde = { version = "1.0.152", features = ["derive"]}
 slug = "0.1.4"
+test-case = "3.0.0"
 toml = "0.7.2"
