--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,5 +15,6 @@ regex = "1.7.1"
 serde = { version = "1.0.152", features = ["derive"]}
 slug = "0.1.4"
 test-case = "3.0.0"
+time = { version = "0.3.29", features = ["parsing"]}
 toml = "0.7.2"
 walkdir = "2.3.3"
